# rust-ffsr

./: .gitignore  Cargo.toml  README.md
benches/: everything.sld  largefile.rs
examples/: fibonacci.rs  repnl.rs
src/: error.rs  lib.rs  macros.rs  syntax.rs
src/input/: indices.rs  iter.rs  mod.rs
src/lexer/: internals.rs  iter.rs  mod.rs  token.rs
src/reader/: datum.rs  internals.rs  iter.rs  mod.rs
src/reader/datum/: booleans.rs  byte_vectors.rs  chars.rs  comments.rs  directives.rs  identifiers.rs  lists.rs  mod.rs  numbers.rs  strings.rs  vectors.rs
src/reader/datum/numbers/: complexnum.rs  fixnum.rs  flonum.rs  mod.rs  parse.rs  ratnum.rs  regex_parser.rs  state_parser.rs
tests/: all.rs
tests/datum/: booleans.rs  chars.rs  directives.rs  identifiers.rs  lists.rs  mod.rs  numbers.rs  strings.rs
tests/files/LispKit/Libraries/srfi/: 14.sld
tests/files/LispPad/: Prelude.scm
tests/files/LispPad/Assets/Scripts/: Sample.scpt
tests/files/LispPad/Examples/: ComposePhotos.scm  CovidGraph.scm  DisplayMap.scm  DisplayMaze.scm  DisplayTrees.scm  ObliqueProjection.scm  PlayMusic.scm  PlotGraph.scm  RenderMarkdown.scm  ScriptingMacOS.scm  Sierpinski.scm  SimpleDraw.scm
tests/files/LispPad/Libraries/lispkit/: log.sld
tests/files/LispPad/Libraries/lisppad/: log.sld  turtle.sld
tests/input/: ascii.rs  mod.rs  pushback.rs  simple.rs  unicode.rs
tests/lexer/: booleans.rs  chars.rs  comments.rs  datum.rs  directives.rs  identifiers.rs  lists.rs  mod.rs  numbers.rs  quotes.rs  specials.rs  strings.rs
tests/reader/: booleans.rs  chars.rs  comments.rs  identifiers.rs  lists.rs  mod.rs  numbers.rs  quotes.rs  references.rs  strings.rs  vectors.rs
