[package]
name = "ffsr"
description = "Flaming-fast Scheme reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1"
concolor = { version = "0.0", features = ["auto"] }
tracing = "0.1.37"
unicode_categories = "0.1.1"

[dev-dependencies]
paste = "1.0"
pretty_assertions = "1.3"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
